# plume

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIRECTION.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: judgment-overlay.md
.claude/archive/: d1-naming-final.md  d2-updater-runbook.md  naming-batch-A.md  naming-batch-B.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  code-review.yml  release.yml  updater-json.yml
docs/: dev-setup.md  encoding-detection.md  features.md
docs/archive/: roadmap-completed-cycles.md
scripts/: openfile-bench.mjs  startup-bench.mjs
src/: asyncguard.test.ts  asyncguard.ts  backup.test.ts  backup.ts  backupflush.test.ts  backupflush.ts  backuppipeline.test.ts  backuppipeline.ts  batchconvert.test.ts  batchconvert.ts  bookmarks.test.ts  bookmarks.ts  bytedrift.test.ts  bytedrift.ts  charinspect.test.ts  charinspect.ts  chunkguard.test.ts  chunkguard.ts  chunkpolicy.test.ts  chunkpolicy.ts  chunkwindow.test.ts  chunkwindow.ts  closedtabs.test.ts  closedtabs.ts  comparepreview.test.ts  comparepreview.ts  confirm.ts  detectcard.test.ts  detectcard.ts  docinfo.test.ts  docinfo.ts  editor-theme.ts  editor.test.ts  editor.ts  encodings.test.ts  encodings.ts  extensionEncodings.test.ts  extensionEncodings.ts  findinfiles.test.ts  findinfiles.ts  (+70 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  batch.rs  bytedrift.rs  charinspect.rs  chunk.rs  comparepreview.rs  docinfo.rs  encoding.rs  fsguard.rs  fuzz_paging.rs  fuzz_roundtrip.rs  hexdump.rs  lib.rs  linebreak.rs  lineindex.rs  main.rs  menu.rs  migrate.rs  mojibake.rs  normalize.rs  openfile_probe.rs  prefs.rs  recent.rs  replaceinfiles.rs  search.rs  session.rs  startup_probe.rs  store.rs  streamcodec.rs  streamconvert.rs  streamreplace.rs  watcher.rs
