[package]
name = "mojidori"
version = "0.7.0"
description = "A fast, lightweight, encoding-first text editor"
authors = ["Hung-Chen Hsu"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mojidori_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
chardetng = "0.1"
notify = "6"
regex = "1"
sys-locale = "0.3.2"
# Already pulled in transitively by `tauri` itself (its app_config_dir()
# etc. are implemented in terms of this same crate, same version — see
# migrate.rs's module doc); declared directly so migrate.rs can compute
# the config dir for a bundle identifier *before* any `tauri::Builder`
# exists, without duplicating Tauri's per-platform base-dir resolution.
dirs = "6"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state = "2"
# Desktop-only (Windows/Linux/macOS) per the plugin's own docs; ROADMAP.md
# D2 auto-update.
tauri-plugin-updater = "2"

[target."cfg(any(target_os = \"windows\", target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = "2"

